# groundwork

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml  render.yaml  research.py  run_demo.py
.github/workflows/: ci.yml
api/: server.py
benchmark/: report.md  run.py
core/: __init__.py  cost.py  providers.py  store.py  tracing.py  types.py  util.py
corpus/: ai_demand_forecasting_logistics.md  ai_implementation_risks.md  ai_roi_evidence.md
docs/: DEMO-TODO.md  DEPLOY.md  DESIGN.md  architecture.md
evals/: report.md  run.py
evals/datasets/: grounding.jsonl  injection.jsonl
mcp_server/: __init__.py  backends.py  server.py  tools.py
orchestrator/: __init__.py  loop.py
redteam/injection_pages/: append_banana_canary.html  clean_control.html  vendor_review_injection.html
reports/: SAMPLE-REPORT-TODO.md  sample_research_report.md
research_agent/: __init__.py  agent.py  defenses.py  grounding.py  llm_grounding.py
tests/: test_api.py  test_backends.py  test_benchmark.py  test_defenses.py  test_evals.py  test_grounding.py  test_llm_grounding.py  test_orchestrator.py  test_store.py
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
