[project]
name = "groundwork"
version = "0.1.0"
description = "A grounded, injection-resistant, cost-aware AI-for-business research platform: MCP server + research agent + orchestrator over a shared core."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Desmond Sleigh" }]
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Real web research: live search (Tavily, via TAVILY_API_KEY) + robust article
# extraction. Without these, fetch falls back to regex extraction and search to
# the local fixture corpus — so dev/CI run with zero keys and zero extras.
real = ["trafilatura>=1.8", "beautifulsoup4>=4.12"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0", "python-dotenv>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "mcp_server", "research_agent", "orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
